@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <settings>
-    <category label="30008">
+    <category  label="30008">
 
         <setting id="account_default" type="labelenum" values="1|2|3|4|5|6|7|8|9" default="1" label="30188" />
 
@@ -118,14 +118,14 @@
     <category label="30196">
 
     	<!-- testing streamer -->
-        <setting id="streamer" type="bool" label="30194" default="false" />
-        <setting id="stream_port" type="number" subsetting="true" label="30195" default="8011" />
-        <setting id="local_db" type="bool" subsetting="true" label="30199" default="false" />
+        <setting id="streamer" type="bool" label="30194" default="false"/>
+        <setting id="stream_port" type="number" subsetting="true" label="30195" default="8011"/>
+        <setting id="local_db" type="bool" subsetting="true" label="30199" default="false"/>
 
 
     	<!-- update watch status -->
-        <setting id="tv_db_watch" type="bool" label="30197" default="false" />
-        <setting id="movie_db_watch" type="bool" label="30198" default="false" />
+        <setting id="tv_db_watch" type="bool" label="30197" default="false"/>
+        <setting id="movie_db_watch" type="bool" label="30198" default="false"/>
 
 		<!-- crypto properties -->
         <setting label="30190" type="lsep"/>
@@ -153,30 +153,30 @@
     </category>
 
 	<!-- music properties -->
-    <category label="30094">
-        <setting label="30037" type="lsep"/>
-        <setting id="context_music" type="enum" subsetting="true" label="30023" values="Music only|Everything" default="0" />
+    <category  label="30094">
+        <setting  label="30037" type="lsep"/>
+        <setting id="context_music" type="enum" subsetting="true" label="30023" values="Music only|Everything" default="0"/>
     </category>
 
    	<!-- photo properties -->
     <category label="30160">
         <setting label="30037" type="lsep"/>
-        <setting id="context_photo" type="enum" subsetting="true" label="30024" values="Photos only|Music and Photos|Everything" default="0" />
-        <setting id="photo_folder" type="folder" label="30038" default="" />
+        <setting id="context_photo" type="enum" subsetting="true" label="30024" values="Photos only|Music and Photos|Everything" default="0"/>
+        <setting id="photo_folder" type="folder" label="30038" default=""/>
         <setting id="photo_resolution" type="enum" label="30185" values="720p|1080p|4k|8k|16k|480p|original" default="0" />
     </category>
 
 	<!-- cache properties -->
-    <category label="30116">
-        <setting id="cache_folder" type="folder" label="30090" default="" />
-    	<setting id="cache_thumbnails" type="bool" subsetting="true" label="30182" default="false" />
-    	<setting id="cache_srt" type="bool" subsetting="true" label="30181" default="false" />
-        <setting label="30031" type="lsep"/>
-    	<setting id="always_cache" type="bool" subsetting="true" label="30121" default="false" />
-        <setting id="cache_single" type="bool" subsetting="true" label="30132" default="false" />
-        <setting id="cache_continue" type="bool" subsetting="true" label="30174" default="false" />
-        <setting id="chunk_size" type="slider" subsetting="true" label="30091" default="163840" option="int" range="131072,8192,8388608" />
-        <setting id="cache_percent" type="slider" subsetting="true" label="30093" default="10" option="percent" range="0,1,100" />
+    <category  label="30116">
+        <setting id="cache_folder" type="folder" label="30090" default=""/>
+    	<setting id="cache_thumbnails" type="bool" subsetting="true" label="30182" default="false"/>
+    	<setting id="cache_srt" type="bool" subsetting="true" label="30181" default="false"/>
+        <setting  label="30031" type="lsep"/>
+    	<setting id="always_cache" type="bool" subsetting="true" label="30121" default="false"/>
+        <setting id="cache_single" type="bool" subsetting="true" label="30132" default="false"/>
+        <setting id="cache_continue" type="bool" subsetting="true" label="30174" default="false"/>
+        <setting id="chunk_size" type="slider" subsetting="true" label="30091" default="163840" option="int" range="131072,8192,8388608"/>
+        <setting id="cache_percent" type="slider" subsetting="true" label="30093" default="10" option="percent" range="0,1,100"/>
     </category>
 
 
@@ -202,12 +202,12 @@
         <setting subsetting="true" label="30166" type="lsep"/>
     </category>
 	<!-- advanced properties -->
-    <category label="30134">
+    <category  label="30134">
 <!-->    	<setting id="integrated_player" type="bool" label="30133" default="false" />-->
-    	<setting id="cc" type="bool" label="30149" default="true" />
-    	<setting id="srt" type="bool" label="30150" default="true" />
-    	<setting id="parse_tv" type="bool" label="30156" default="true" />
-    	<setting id="parse_music" type="bool" label="30157" default="true" />
+    	<setting id="cc" type="bool" label="30149" default="true"/>
+    	<setting id="srt" type="bool" label="30150" default="true"/>
+    	<setting id="parse_tv" type="bool" label="30156" default="true"/>
+    	<setting id="parse_music" type="bool" label="30157" default="true"/>
 
     </category>
 
